# brickformer

./: .clang-format  .dockerignore  .env  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  example.env.cmake  f_modeling.py  vcpkg.json
.github/: FUNDING.yml
assets/: imgui.ini
docs/: :).md  bfc_format.md  notes.tex
resources/brick_models/: obj_to_c_array.py
scripts/: build-headless.sh  colors.csv  colors.json  elements.csv  generate_lego_dataset.py  get_colors.py  lego_dataset.h
src/: App.cu  App.cuh  Arpenteur.cu  Arpenteur.cuh  ArpenteurListener.hpp  AssignPlacementColor.cu  AssignPlacementColor.h  BrickColors.cu  BrickColors.h  BrickFormerAPI.cu  BrickFormerAPI.h  BrickModel.cu  BrickModel.h  Bvh.cuh  CMakeLists.txt  Converter.cu  Converter.h  ConverterListener.h  DeviceImage.cuh  DeviceImage.h  PaidPlan.h  PlacementSolver.cu  PlacementSolver.h  Slicer.cu  Slicer.cuh  Slicer.h  SpreadValue.cu  SpreadValue.cuh  SpreadValue.h  StopWatch.hpp  SyncDaemon.cu  SyncDaemon.h  User.cu  User.h  UserSyncDaemon.cu  UserSyncDaemon.h  _App.cu  _App.cuh  _main.cu  assign_placements_color.cuh  (+19 more)
src/exporters/: BuildInstructionsExporter.cu  BuildInstructionsExporter.h  GltfExporter.cu  GltfExporter.h  OutputToGltf.cu  OutputToGltf.cuh
src/headless/: App.cu  CMakeLists.txt
src/io/: BrickModelIO.cu  BrickModelIO.h
src/model/: DeviceModel.cu  DeviceModel.cuh  DeviceModel.h  GltfLoader.cpp  GltfLoader.h  GltfLoader.hpp  Model.cpp  Model.h  Model.hpp
src/slicer/: BuildBvh.cu  BuildBvh.cuh  CMakeLists.txt  DeviceModel.cu  DeviceModel.cuh  GltfLoader.cpp  GltfLoader.hpp  Model.cpp  Model.hpp  Slicer.cu  Slicer.cuh  intersections.cuh  main.cu
src/slicer/video/: Camera.hpp  ModelRenderer.cpp  ModelRenderer.hpp  TextureRenderer.cpp  TextureRenderer.hpp  ViewModelApp.cpp  ViewModelApp.hpp  Window.cpp  Window.hpp  cuda_interop_helpers.cu  cuda_interop_helpers.cuh  gl_helpers.cpp  gl_helpers.hpp
src/ui/: App.cu  App.cuh  App.h  AuthScreen.cu  AuthScreen.h  BrickColorsWindow.cu  BrickColorsWindow.h  BrickModelBuilder.cpp  BrickModelBuilder.cu  BrickModelBuilder.h  BrickModelBuilder.hpp  BrickModelWindow.cu  BrickModelWindow.h  CMakeLists.txt  ConversionWindow.cu  ConversionWindow.h  ConverterVisualizationBridge.cu  ConverterVisualizationBridge.h  InputWindow.cu  InputWindow.h  MainScreen.cu  MainScreen.h  Queue.h  Queue.hpp  Screen.h  UIStyle.cpp  UIStyle.h  UserWindow.cu  UserWindow.h  View3dWindow.cpp  View3dWindow.h  ViewConversionWindow.cu  ViewConversionWindow.h  _main.cu  brick_models.hpp  main.cu  ui.cpp  ui.hpp
src/ui/video/: Camera.cpp  Camera.hpp  CustomFramebuffer.cpp  CustomFramebuffer.hpp  ModelRenderer.cpp  ModelRenderer.hpp  TextureRenderer.cpp  TextureRenderer.hpp  ViewModelApp.cpp  ViewModelApp.hpp  Window.cpp  cuda_interop_helpers.cuh  gl_helpers.cpp  gl_helpers.hpp
src/ui/windows/: BrickColorsWindow.cu  BrickColorsWindow.h  BrickModelWindow.cu  BrickModelWindow.h  ConversionWindow.cu  ConversionWindow.h  InputWindow.cu  InputWindow.h  UserWindow.cu  UserWindow.h  View3dWindow.cpp  View3dWindow.h
src/util/: BoundingBox3f.hpp  Queue.h  StaticVector.cuh  StaticVector.h  StopWatch.h  StopWatch.hpp  exceptions.h  external_libs.cpp  intersections.cuh  intersections.h  misc.cuh  misc.h  misc.hpp  misc_cuda.h  str_utils.h
src/video/: BoxFilter.cpp  BoxFilter.hpp  BrickPlaneRenderer.cpp  BrickPlaneRenderer.h  BrickRenderer.cpp  BrickRenderer.h  CMakeLists.txt  Camera.cpp  Camera.hpp  CustomFramebuffer.cpp  CustomFramebuffer.hpp  GBuffer.cpp  GBuffer.hpp  GridRenderer.cpp  GridRenderer.hpp  ModelRenderer.cpp  ModelRenderer.hpp  SSAOPass.cpp  SSAOPass.hpp  ScreenQuad.cpp  ScreenQuad.hpp  TextureRenderer.cpp  TextureRenderer.hpp  VoxelModelBuilder.cpp  VoxelModelBuilder.hpp  Window.cpp  Window.hpp  cuda_interop_helpers.cu  cuda_interop_helpers.cuh  gl_helpers.cpp  gl_helpers.hpp
src/voxel/: CMakeLists.txt  Slicer.cu  main_TriBoxClipping.cpp
test/: CMakeLists.txt  SpreadValue_main.cu  main.cu  resources.hpp
