
add_executable(arpenteur_ui
        App.cu
        App.h
        AuthScreen.cu
        AuthScreen.h
        BrickColorsWindow.cu
        BrickColorsWindow.h
        MainScreen.cu
        MainScreen.h
        Queue.h
        BrickModelBuilder.cu
        BrickModelBuilder.h
        ConversionWindow.cu
        ConversionWindow.h
        ConverterVisualizationBridge.cu
        ConverterVisualizationBridge.h
        InputWindow.cu
        InputWindow.h
        main.cu
        Screen.h
        UIStyle.cpp
        UIStyle.h
        View3dWindow.cpp
        View3dWindow.h
        BrickModelWindow.cu
        BrickModelWindow.h
)
target_link_libraries(arpenteur_ui PRIVATE arpenteur arpenteur_video nfd)
